--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -53,6 +53,9 @@
 }
 
 #canvas {
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
     image-rendering: pixelated;
 }
 
