--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -1,9 +1,14 @@
 .header {
-    background-color: black;
+    background-color: #002050;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     padding: 10px;
+    position: relative;
+}
+
+.header img {
+    max-height: 55px;
 }
 
 .text-container {
@@ -64,4 +69,7 @@
 
 .tweet-area {
     margin: 10px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
