--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -32,12 +32,12 @@
 }
 
 .palette-container {
-    width: 80px;
+    width: 35px;
 }
 
 .palette-button {
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     margin: 10px;
     border: 1px solid black;
     opacity: 0.3;
@@ -50,9 +50,10 @@
 }
 
 #canvas-container {
+    background-color: antiquewhite;
     margin-left: 10px;
-    width: 1000px;
-    height: 1000px;
+    width: calc(100vw - 35px);
+    height: calc(100vh - 120px);
     border: 1px solid black;
 }
 
@@ -72,4 +73,10 @@
     position: absolute;
     top: 0px;
     right: 0px;
+}
+
+.coordinates-container,
+.timer-container {
+    margin: 10px;
+    text-align: center;
 }
