--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -4,7 +4,6 @@
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     padding: 10px;
-    position: relative;
 }
 
 .header img {
@@ -15,6 +14,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 20px;
+    flex-grow: 1;
 }
 
 .title {
@@ -43,7 +43,7 @@
     height: 25px;
     margin: 4px;
     border: 1px solid black;
-    opacity: 0.3;
+    opacity: 0.5;
 }
 
 .palette-button.selected {
@@ -53,7 +53,8 @@
 }
 
 #canvas-container {
-    background-color: antiquewhite;
+    background-image: url("../img/background_patch.png");
+    background-repeat: repeat;
     margin-left: 10px;
     flex-grow: 1;
     height: calc(100vh - 120px);
@@ -74,12 +75,24 @@
 .tweet-area {
     margin: 10px;
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     right: 0px;
 }
 
-.coordinates-container,
 .timer-container {
     margin: 10px;
     text-align: center;
+}
+
+.coordinates-container {
+    position: absolute;
+    text-align: center;
+    right: 0px;
+    top: 100px;
+    width: 90px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    background-color: #002050;
+    font-size: 14px;
+    color: #ffffff;
 }
