More css anti-blurry config

--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -78,8 +78,12 @@ body {
 #canvas {
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
+    image-rendering: -o-crisp-edges;
     image-rendering: crisp-edges;
     image-rendering: pixelated;
+    image-rendering: optimizeSpeed;
+    image-rendering: optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 #subcanvas {
