--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -95,7 +95,7 @@ body {
     -ms-interpolation-mode: nearest-neighbor;
     opacity: 0;
     position: relative;
-    z-index: 1000;
+    z-index: 10;
 }
 
 #subcanvas {
@@ -149,4 +149,17 @@ body {
 .palette-container input {
     position: absolute;
     bottom: 0px;
+}
+
+#cursor-friend {
+    cursor: none;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    z-index: 20;
+    border: 1px solid white;
+}
+
+.cursorbordered {
+    outline: 1px solid #333333;
 }
