--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -155,3 +155,42 @@ body {
     position: absolute;
     bottom: 0px;
 }
+
+.icon-xlarge {
+    width: 12.5vh;
+}
+
+#prerelease-overlay {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,.5);
+    z-index: 100;
+}
+
+#prerelease-box {
+    width: 40vw;
+    height: 40vh;
+    background-color: #002050;
+    color: white;
+    font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif; 
+    font-weight: 100 !important;
+    display: flex;
+    padding: 10px;
+    vertical-align: middle;
+    position: absolute;
+    top: 30vh;
+    left: 30vw;
+    flex-direction: column;
+    font-size: 1.5em;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+#prerelease-box h1 {
+    margin-top: 2.75vh;
+    font-weight: 100 !important;
+}
