Show trending tweets (#46)
* Add trending tweets

* Move title and twitter button next to each other. Use id from tweet rest endpoint. Remove test code.

* Recenter canvas after initial tweet load (which will change the width

* Fix env var check

* Fix error case

--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -3,15 +3,16 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
     background-color: #002050;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     padding: 10px;
     vertical-align: middle;
+    flex-shrink: 0;
 }
 
 .header img {
@@ -154,4 +155,24 @@ body {
 .palette-container input {
     position: absolute;
     bottom: 0px;
+}
+
+.tweets-container {
+    border-left: 1px solid #cccccc;
+    overflow: auto;
+}
+
+.tweets-container .top-line {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 15px 0px 15px;
+    align-items: flex-end;
+}
+
+.tweets-container .title {
+    font-weight: bold;
+}
+
+#tweets {
+    padding: 0px 15px;
 }
