--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -176,7 +176,7 @@ body {
     height: 40vh;
     background-color: #002050;
     color: white;
-    font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif; 
+    font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif;
     font-weight: 100 !important;
     display: flex;
     padding: 10px;
@@ -214,4 +214,52 @@ body {
 
 #tweets {
     padding: 0px 15px;
+}
+
+.zoom-buttons-container {
+    position: absolute;
+    text-align: center;
+    left: 20px;
+    bottom: 20px;
+
+    background-color: #FFFFFF;
+    box-shadow: -2px 2px 5px 0 rgba(0,0,0,0.5);
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
+
+.button-separator {
+    box-sizing: border-box;
+    height: 2px;
+    border: 1px solid #676767;
+    margin: 5px 0px;
+}
+
+.zoom-button {
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    margin: 5px;
+    z-index: 30;
+}
+
+#zoom-in {
+    background: url("../img/Zoom_in.svg") no-repeat;
+    background-size:cover;
+}
+
+#zoom-in:hover {
+    background: url("../img/Zoom_in_on_hover.svg") no-repeat;
+    background-size:cover;
+}
+
+#zoom-out {
+    background: url("../img/Zoom_out.svg") no-repeat;
+    background-size:cover;
+}
+
+#zoom-out:hover {
+    background: url("../img/Zoom_out_on_hover.svg") no-repeat;
+    background-size:cover;
 }
