--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -3,7 +3,8 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif;
+    overflow: hidden;
 }
 
 .header {
@@ -42,6 +43,7 @@ body {
     display: flex;
     flex-grow: 1;
     overflow: hidden;
+    position: relative;
 }
 
 .palette-container {
@@ -176,7 +178,6 @@ body {
     height: 40vh;
     background-color: #002050;
     color: white;
-    font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif;
     font-weight: 100 !important;
     display: flex;
     padding: 10px;
@@ -196,26 +197,43 @@ body {
     font-weight: 100 !important;
 }
 
-.tweets-container {
+.tweets-pane {
     border-left: 1px solid #cccccc;
-    overflow: auto;
+    display: flex;
+    flex-direction: column;
 }
 
-.tweets-container .top-line {
+.tweets-pane .top-line {
     display: flex;
     justify-content: space-between;
-    padding: 15px 15px 0px 15px;
+    margin: 20px 20px 15px 20px;
     align-items: flex-end;
+    flex-shrink: 0;
 }
 
-.tweets-container .title {
-    font-weight: bold;
+.tweets-pane .title {
+    font-size: 18px;
+    margin-right: 20px;
 }
 
 #tweets {
     padding: 0px 15px;
 }
 
+.tweets-container {
+    overflow: auto;
+}
+
+.twitter-expand {
+    margin-top: 10px;
+    padding: 12px;
+    background-color: #3991cf;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: 40;
+    cursor: pointer;
+}
 .zoom-buttons-container {
     position: absolute;
     text-align: center;
