Thumbnail: highlight viewport and darken the rest instead of drawing rectangle. Thumbnail bigger. CSS shadow. Calculate thumbnail factor dynamically based on thumbnail-canvas size

--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -291,5 +291,5 @@ body {
     text-align: center;
     right: 20px;
     bottom: 20px;
-    border: 1px solid black;
+    box-shadow: -2px 2px 5px 0 rgba(0,0,0,0.5);
 }
